infra/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
spec:
  selector:
    app: readarr
  ports:
    - name: http
      port: 8787
      targetPort: 8787
      protocol: TCP
