infra/readarr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: readarr
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - "readarr.monederobox.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: readarr
          port: 8787
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: oidc-readarr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: readarr
  oidc:
    provider:
      issuer: "https://pocket-id.monederobox.dev"
    clientID: "32120481-da0c-4549-b492-52e91878f2f1"
    clientSecret:
      name: internal-tools-oidc-secret
      namespace: readarr
    redirectURL: "https://readarr.monederobox.dev/oauth2/callback"
    scopes:
      - openid
      - profile
      - email
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 100.64.0.0/10
            - 192.168.1.0/24
